<resources>
    <string name="app_name">CatCut</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_create_link">Create link</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_url">This url is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_log_in">Log In</string>
    <string name="action_create_new_account">Create New Account</string>
    <string name="action_successful_new_account">Your account has been created! Log in please.</string>
    <string name="action_log_in_short">Log In</string>
    <string name="action_submit">Submit</string>
    <string name="action_create_link">Create link</string>
    <string name="action_share">Share</string>
    <string name="action_sale">Sale</string>
    <string name="action_partnership">Partnership</string>
    <string name="action_web">Web</string>
    <string name="action_referals">Referals</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_advertise">Advertise</string>
    <string name="title_earn">Earn</string>
    <string name="title_profile">Account</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">CatCut</string>
    <string name="title_activity_login_login">Log In</string>
    <string name="title_activity_login_create">Create New Account</string>
    <string name="title_complete_sign_up_by_verify_email">We sent to your email with PIN.
        Complete your registration by filling form above.
        You has %d attempts.
    </string>
    <string name="title_share_using">CatCut Share</string>
    <string name="title_enable_ad">Advertise</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_about">About</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_title_message_notifications">New message notifications</string>
    <string name="pref_title_email">Email</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_description_logout">Logout from the system</string>
    <string name="action_links">Links</string>
    <string name="title_link">Link</string>
    <string name="title_type">Type</string>
    <string name="type_budged">Budged</string>
    <string name="message_no_internet_connection">No internet connection</string>
    <string name="message_copied_to_clipboard">Copied to clipboard</string>
    <string name="title_enable_after_verification">Enable automatically Ad after verification</string>
    <string name="title_new_page_in_surfing">New page in surfing</string>
    <string name="title_gettargeting">Geotargeting</string>
    <string name="title_settings">Settings</string>
    <string-array name="array_surfsite_type">
        <item>Web Page</item>
        <item>Page VK</item>
        <item>Group VK</item>
        <item>Pubic page Facebook</item>
        <item>Odnoklasniki</item>
        <item>Instagram</item>
    </string-array>
    <string-array name="array_surfsite_type_values">
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
        <item>-3</item>
        <item>-4</item>
        <item>-5</item>
    </string-array>
    <string name="title_extend_auditory">Extended auditory %d times</string>
    <string name="title_invite_friend">Invite Friends</string>
    <string name="title_budged">Budged</string>
    <string name="title_policy_privacy">Policy Privacy</string>
    <string name="replish">Replish</string>
    <string name="title_ad_balance">Advertisment balance</string>
    <string name="title_earned">Earned</string>
</resources>