<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragments.SurfSiteDetailFragment">


    <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
            <ProgressBar
                    android:id="@+id/progressbar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"/>
        </LinearLayout>


        <TableLayout android:layout_width="match_parent"
                     android:layout_height="match_parent">

            <TableRow>
                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/title_new_page_in_surfing"
                        android:textSize="20sp"
                        android:layout_height="30dip"
                />
            </TableRow>
            <TableRow android:layout_width="match_parent">
                <Spinner
                        android:id="@+id/urlType"
                        android:layout_width="0dp"
                        android:layout_weight=".95"
                        android:autofillHints="@string/title_type"
                        android:maxWidth="200dp"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:textSize="@dimen/detail_link_size">
                </Spinner>
            </TableRow>
            <TableRow android:layout_width="match_parent">
                <EditText
                        android:id="@+id/site_url"
                        android:layout_width="0dp"
                        android:layout_weight=".95"
                        android:maxWidth="200dp"
                        android:maxLines="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:singleLine="true"
                        android:textSize="@dimen/detail_link_size"/>
            </TableRow>
            <TableRow android:visibility="gone">
                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingTop="20dp"
                        android:text="@string/title_gettargeting"
                        android:textAlignment="center"
                        android:lineHeight="40dp"
                        android:textSize="20sp"
                        android:layout_height="50dip"
                />
            </TableRow>
            <TableRow android:layout_width="match_parent" android:visibility="gone">
                <Spinner
                        android:id="@+id/geotarget_type"
                        android:layout_width="0dp"
                        android:layout_weight=".95"
                        android:maxWidth="200dp"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:textSize="@dimen/detail_link_size">
                </Spinner>
            </TableRow>
            <TableRow android:layout_width="match_parent">
                <Spinner
                        android:id="@+id/countries"
                        android:layout_width="0dp"
                        android:layout_weight=".95"
                        android:maxWidth="200dp"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:visibility="gone"
                        android:textSize="@dimen/detail_link_size">
                </Spinner>
            </TableRow>
            <TableRow>
                <TextView
                        android:paddingTop="20dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/title_settings"
                        android:lineHeight="40dp"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_height="50dip"
                />
            </TableRow>

            <TableRow android:layout_width="match_parent">


                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_vertical">

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="15dp"
                            android:orientation="horizontal">
                        <TextView
                                android:id="@+id/audience"
                                android:layout_width="wrap_content"
                                android:text="x1"
                                android:layout_marginTop="3dp"
                                android:textSize="16sp"
                                android:layout_height="wrap_content"/>
                        <ImageButton android:id="@+id/decrease_audience"
                                android:layout_width="30dp"
                                     android:background="@color/colorAccent"
                                     android:layout_height="30dp"
                                     android:layout_marginLeft="10dp"
                                     android:tint="@color/colorWhite"
                                     android:src="@drawable/baseline_remove_black_18dp"/>
                        <ImageButton android:id="@+id/increase_audience"
                                android:layout_width="30dp"
                                     android:background="@color/colorPrimary"
                                     android:layout_height="30dp"
                                     android:layout_marginLeft="10dp"
                                     android:tint="@color/colorWhite"
                                     android:src="@drawable/baseline_add_black_18dp"/>
                        <TextView
                                android:id="@+id/one_view_price"
                                android:layout_width="wrap_content"
                                android:text="0.0 RUB"
                                android:layout_marginTop="3dp"
                                android:paddingLeft="7dp"
                                android:textSize="18sp"
                                android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <TextView
                            android:id="@+id/extended_auditory_description"
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:text="@string/title_extend_auditory"
                            android:textSize="16sp"
                            android:orientation="horizontal"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
            </TableRow>
            <TableRow android:layout_width="match_parent">
                <Spinner
                        android:id="@+id/budged_type"
                        android:layout_width="0dp"
                        android:layout_weight=".95"
                        android:maxWidth="200dp"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:textSize="@dimen/detail_link_size">
                </Spinner>
            </TableRow>
            <TableRow android:layout_width="match_parent">
                <EditText
                        android:id="@+id/budged"
                        android:layout_width="0dp"
                        android:layout_weight=".95"
                        android:maxWidth="200dp"
                        android:maxLines="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:singleLine="true"
                        android:hint="@string/title_budged"
                        android:inputType="number"
                        android:visibility="gone"
                        android:textSize="@dimen/detail_link_size"/>
            </TableRow>
            <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_vertical">
                    <com.google.android.gms.ads.AdView
                            android:visibility="gone"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"
                            xmlns:ads="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/adView"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            ads:adSize="BANNER"
                            ads:adUnitId="ca-app-pub-3579118192425679/9912093393">
                    </com.google.android.gms.ads.AdView>
                </LinearLayout>
            </TableRow>
            <TableRow android:layout_width="match_parent">
                <Switch android:id="@+id/enable_after_verification"
                        android:textSize="@dimen/detail_link_size"
                        android:layout_width="0dp"
                        android:layout_weight=".95"
                        android:maxWidth="200dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:text="@string/title_enable_after_verification"/>
            </TableRow>

        </TableLayout>
        <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/action_submit"
                android:minWidth="@dimen/max_button_width"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
        />


    </LinearLayout>

</ScrollView>